fixes for the snaps, margins and custom scrollbars

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -707,7 +707,7 @@ div.input-group > .input-group-addon {
 }
 
 .group-container {
-  margin: 10px 0 5px 15px;
+  margin: 15px 0 5px 15px;
 }
 
 /* scrollbars
